--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3", viewport-fit=cover'>
+        <!-- iOS status bar color -->
+        <meta name="theme-color" content="#000000" />
     </head>
 
     <body>
