--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3", viewport-fit=cover'>
         <!-- iOS status bar color -->
-        <meta name="theme-color" content="#000000" />
+        <meta name='viewport'
+            content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, viewport-fit=cover'>
+        <meta name="theme-color" content="inherit" />
     </head>
 
     <body>
