--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,23 @@
         <title>Portfolio</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <!-- Favicons -->
+        <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+        <link rel="manifest" href="/assets/favicons/site.webmanifest">
+        <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#7b7b7b">
+        <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+        <meta name="msapplication-TileColor" content="#000000">
+        <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+        <meta name="theme-color" content="#000000">
         <!-- iOS status bar color -->
         <meta name='viewport'
-            content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, viewport-fit=cover'>
+            content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover'>
         <meta name="theme-color" content="inherit" />
+        <!-- ScrollReveal -->
+        <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     </head>
 
     <body>
