feat(site-description): added meta description for search engine preview description of site

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <title>Portfolio</title>
         <base href="/">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Site Description -->
+        <meta name="description" content="Dan Moulton is a full-stack software engineer with almost a decade of experience bulding solutions for companies across many industries.">
         <!-- Favicons -->
         <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
@@ -16,8 +17,8 @@
         <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
         <meta name="msapplication-TileColor" content="#000000">
         <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
-        <meta name="theme-color" content="#000000">
         <!-- iOS status bar color -->
+        <meta name="theme-color" content="#000000">
         <meta name='viewport'
             content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover'>
         <!-- ScrollReveal -->
