feat(home): implemented home component to appear on first page load

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
         <title>Portfolio</title>
         <base href="/">
         <!-- Site Description -->
-        <meta name="description" content="Dan Moulton is a full-stack software engineer with almost a decade of experience bulding solutions for companies across many industries.">
+        <meta name="description"
+            content="Dan Moulton is a full-stack software engineer with almost a decade of experience bulding solutions for companies across many industries.">
         <!-- Favicons -->
         <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
@@ -17,6 +18,10 @@
         <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
         <meta name="msapplication-TileColor" content="#000000">
         <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+        <!-- Fonts -->
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Major+Mono+Display&family=Play&family=Tomorrow&display=swap');
+        </style>
         <!-- iOS status bar color -->
         <meta name="theme-color" content="#000000">
         <meta name='viewport'
